# testUpdateDataBase

./: .gitignore  LICENSE  README.md  fill_db.py  parser.py  pyproject.toml  requirements.txt  runner.py
database/: db.py  db.sqlite3
logs/: exception.py  logger.py
testDir/: bar  foo
testDir/testInsideFolder/: bazoongo
testDir/testInsideFolder/InsideInsideFolder/: insideTestFile
utils/: exceptions.py  helpers.py  parser.py
